commit before deploy

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,6 +6,8 @@
 @import "news.css";
 @import "market.css";
 @import "profile.css";
+@import "product.css";
+@import "newsdetail.css";
 
 * {
   margin: 0;
@@ -58,5 +60,41 @@
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+.go-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #327a6d;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  width: 50px;
+  height: 50px;
+  font-size: 25px;
+  display: none;
+  cursor: pointer;
+  text-align: center;
+  line-height: 50px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.go-to-top:hover {
+  background-color: #255e49;
+}
+
+.go-to-top:focus {
+  outline: none;
+}
+
+@media (max-width: 580px) {
+  .go-to-top {
+    width: 35px;
+    height: 35px;
+    font-size: 22px;
+    line-height: 0;
+    border-radius: 5px;
   }
 }
