--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -146,7 +146,12 @@
   justify-content: center;
   align-items: start;
   width: 100%;
-  height: 300px;
+  height: 350px;
+  cursor: pointer;
+}
+
+.section-content-5 .section-card-content-5 .card:hover{
+  transition: 0.2s ease-in;
 }
 
 .section-content-5 .section-card-content-5 .card img {
