--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -30,6 +30,19 @@
   font-weight: 500;
 }
 
+.navbar-collapse {
+  display: none;
+  transition: display 0.3s ease;
+}
+
+.navbar-collapse.active {
+  display: block;
+}
+
+.navbar-toggler {
+  cursor: pointer;
+}
+
 .nav-link:hover {
   color: #327a6d;
 }
