--- a/src/styles/newsdetail.css
+++ b/src/styles/newsdetail.css
@@ -44,7 +44,7 @@
 .another-news-section .another-news-section-cardContainer .card img {
   object-fit: cover;
   width: 100%;
-  height: 100%;
+  height: 150px;
 }
 
 .another-news-section.swiper-pagination-4 {
@@ -66,16 +66,26 @@
   .img-news-container img {
     width: 40%;
   }
+  .another-news-section .another-news-section-cardContainer .card img {
+    height: 190px;
+  }
 }
 
 @media (min-width: 600px) and (max-width: 1080px) {
   .img-news-container img {
     width: 100%;
   }
+  .another-news-section .another-news-section-cardContainer .card img {
+    height: 205px;
+  }
 }
 
 @media (max-width: 580px) {
   .img-news-container img {
     width: 100%;
+  }
+
+  .another-news-section .another-news-section-cardContainer .card img {
+    height: 205px;
   }
 }
